# multilint

./: .gitignore  Cargo.toml  LICENSE  README.md  multilint.toml
.github/workflows/: release.yml  rust.yml
src/: config.rs  driver.rs  format.rs  lib.rs  linter.rs  main.rs  parser.rs  printer.rs  xargs.rs
