[package]
name = "multilint"
version = "0.1.0"
edition = "2021"
description = "A driver of multiple linters"

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
ignore = "0.4.18"
log = "0.4.17"
env_logger = "0.9.0"
colored = "2.0.0"
structopt = "0.3.26"
which = "4.2.5"

[dev-dependencies]
tempfile = "3.3.0"
test-log = "0.2.11"
