[package]
name = "multilint"
version = "0.2.1"
edition = "2021"
description = "A driver of multiple linters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/regen100/multilint"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]
include = ["LICENSE", "src/"]

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
ignore = "0.4.18"
log = "0.4.17"
env_logger = "0.9.0"
colored = "2.0.0"
structopt = "0.3.26"
which = "4.2.5"
regex = "1.6.0"
serde_json = "1.0.83"
argmax = "0.3.0"
sha2 = "0.10.6"
digest = "0.10.6"

[dev-dependencies]
tempfile = "3.3.0"
test-log = "0.2.11"
