[package]
name = "multilint"
version = "0.3.0"
edition = "2021"
description = "A driver of multiple linters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/regen100/multilint"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]
include = ["LICENSE", "src/"]

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
ignore = "0.4.20"
log = "0.4.20"
env_logger = "0.10.1"
colored = "2.0.4"
structopt = "0.3.26"
which = "5.0.0"
regex = "1.10.2"
serde_json = "1.0.108"
argmax = "0.3.1"
sha2 = "0.10.8"
digest = "0.10.7"

[dev-dependencies]
tempfile = "3.8.1"
test-log = "0.2.13"
